add basic swagger documentation + moved cors middleware
